# francis

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  org.kde.francis.desktop  org.kde.francis.json  org.kde.francis.metainfo.xml  snapcraft.yaml
.reuse/: dep5
android/: AndroidManifest.xml  build.gradle
po/ar/: francis.po
po/ast/: francis.po
po/ca/: francis.po
po/ca@valencia/: francis.po
po/cs/: francis.po
po/de/: francis.po
po/en_GB/: francis.po
po/eo/: francis.po
po/es/: francis.po
po/eu/: francis.po
po/fi/: francis.po
po/fr/: francis.po
po/ga/: francis.po
po/gl/: francis.po
po/he/: francis.po
po/hi/: francis.po
po/hu/: francis.po
po/ia/: francis.po
po/it/: francis.po
po/ja/: francis.po
po/ka/: francis.po
po/ko/: francis.po
po/lt/: francis.po
po/lv/: francis.po
po/nl/: francis.po
po/nn/: francis.po
po/pl/: francis.po
po/pt/: francis.po
po/pt_BR/: francis.po
po/ro/: francis.po
po/ru/: francis.po
po/sa/: francis.po
po/sk/: francis.po
po/sl/: francis.po
po/sv/: francis.po
po/tr/: francis.po
po/ug/: francis.po
po/uk/: francis.po
po/zh_CN/: francis.po
po/zh_TW/: francis.po
src/: CMakeLists.txt  Messages.sh  about.cpp  about.h  app.cpp  app.h  config.kcfg  config.kcfgc  controller.cpp  controller.h  main.cpp  resources.qrc
src/autotests/: CMakeLists.txt  controllertest.cpp
src/ui/: About.qml  GlobalMenu.qml  Main.qml  PageHeader.qml  main.qml
